Fixing bug #1548 : displaying the thumbnail + better production of pdf
git-svn-id: https://www.silverpeas.org/svn/silverpeas/components/trunk@3388 a8e77078-a1c7-4fa5-b8fc-53c5178a176c